--- a/css/styles.css
+++ b/css/styles.css
@@ -575,7 +575,7 @@ color: var(--hl-sec);
 }
 
 .dropdown ul:hover,
-.dropdown button:focus + ul {
+.dropdown button:hover + ul {
 opacity: 1;
 pointer-events: all;
 transform: translateY(0px);
